--- a/software/package.json
+++ b/software/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/Zhongy1/AreaMonitor/issues"
   },
-  "homepage": "https://github.com/Zhongy1/AreaMonitor#readme"
+  "homepage": "https://github.com/Zhongy1/AreaMonitor#readme",
+  "dependencies": {
+    "@types/node": "^17.0.8",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
+  }
 }
