--- a/software/package.json
+++ b/software/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node main.ts -p 8000",
+    "start-not-pi": "ts-node main.ts -p 8000 --notPi"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,7 @@
   },
   "homepage": "https://github.com/Zhongy1/AreaMonitor#readme",
   "dependencies": {
-    "@types/node": "^17.0.8",
+    "@types/node": "^17.0.9",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
