--- a/software/package.json
+++ b/software/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/ejs": "^3.1.0",
     "@types/node": "^17.0.9",
+    "del": "^6.0.0",
     "ejs": "^3.1.6",
     "fastify": "^3.25.3",
     "fastify-static": "^4.5.0",
