--- a/software/package.json
+++ b/software/package.json
@@ -2,11 +2,11 @@
   "name": "areamonitor",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "frontend/public/index.js",
   "scripts": {
     "start": "ts-node main.ts -p 8000",
     "start-not-pi": "ts-node main.ts -p 8000 --notPi",
-    "build-frontend": "sass frontend/scss:frontend/public"
+    "build-frontend": "sass frontend/scss:frontend/public; parcel build frontend/client/index.ts"
   },
   "repository": {
     "type": "git",
@@ -24,14 +24,17 @@
     "del": "^6.0.0",
     "ejs": "^3.1.6",
     "fastify": "^3.25.3",
+    "fastify-socket.io": "^3.0.0",
     "fastify-static": "^4.5.0",
     "passport-local": "^1.0.0",
     "pino-pretty": "^7.5.0",
     "point-of-view": "^5.0.0",
+    "socket.io-client": "^4.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
+    "parcel": "^2.3.2",
     "sass": "^1.49.0"
   }
 }
