--- a/software/package.json
+++ b/software/package.json
@@ -21,9 +21,11 @@
   "dependencies": {
     "@types/ejs": "^3.1.0",
     "@types/node": "^17.0.9",
+    "axios": "^0.26.0",
     "del": "^6.0.0",
     "ejs": "^3.1.6",
     "fastify": "^3.25.3",
+    "fastify-formbody": "^5.2.0",
     "fastify-socket.io": "^3.0.0",
     "fastify-static": "^4.5.0",
     "passport-local": "^1.0.0",
