--- a/software/package.json
+++ b/software/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.6",
     "fastify": "^3.25.3",
     "fastify-formbody": "^5.2.0",
+    "fastify-http-proxy": "^6.2.2",
     "fastify-socket.io": "^3.0.0",
     "fastify-static": "^4.5.0",
     "passport-local": "^1.0.0",
